--- a/task-1.html
+++ b/task-1.html
@@ -5,40 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 1</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+      media="print"
+      onload="this.media='all'"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-    <p><a href="./index.html">Go back</a></p>
+    <p><a class="nav-list__link" href="./index.html">Go back</a></p>
 
     <ul id="categories">
       <li class="item">
-        <h2>Animals</h2>
+        <h2 class="category__header">Animals</h2>
 
-        <ul>
-          <li>Cat</li>
-          <li>Hamster</li>
-          <li>Horse</li>
-          <li>Parrot</li>
+        <ul class="category__list">
+          <li class="category__item">Cat</li>
+          <li class="category__item">Hamster</li>
+          <li class="category__item">Horse</li>
+          <li class="category__item">Parrot</li>
         </ul>
       </li>
       <li class="item">
-        <h2>Products</h2>
+        <h2 class="category__header">Products</h2>
 
-        <ul>
-          <li>Bread</li>
-          <li>Prasley</li>
-          <li>Cheese</li>
+        <ul class="category__list">
+          <li class="category__item">Bread</li>
+          <li class="category__item">Prasley</li>
+          <li class="category__item">Cheese</li>
         </ul>
       </li>
       <li class="item">
-        <h2>Technologies</h2>
+        <h2 class="category__header">Technologies</h2>
 
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
+        <ul class="category__list">
+          <li class="category__item">HTML</li>
+          <li class="category__item">CSS</li>
+          <li class="category__item">JavaScript</li>
+          <li class="category__item">React</li>
+          <li class="category__item">Node.js</li>
         </ul>
       </li>
     </ul>
